src/test/ui/generator/auto-trait-regions.stderr
error[E0308]: mismatched types
  --> $DIR/auto-trait-regions.rs:30:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Foo`
              found type `Foo`
   = note: lifetime RePlaceholder(Placeholder { universe: U31, name: BrAnon(1) })...
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/auto-trait-regions.rs:30:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Foo`
              found type `Foo`
   = note: lifetime RePlaceholder(Placeholder { universe: U35, name: BrAnon(1) })...
   = note: ...does not necessarily outlive the static lifetime

error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'b` due to conflicting requirements
  --> $DIR/auto-trait-regions.rs:49:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^
   |
   = note: first, the lifetime cannot outlive lifetime RePlaceholder(Placeholder { universe: U47, name: BrAnon(2) })...
   = note: ...but the lifetime must also be valid for lifetime RePlaceholder(Placeholder { universe: U47, name: BrAnon(1) })...
   = note: ...so that the types are compatible:
           expected Foo
              found Foo

error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'b` due to conflicting requirements
  --> $DIR/auto-trait-regions.rs:49:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^
   |
   = note: first, the lifetime cannot outlive lifetime RePlaceholder(Placeholder { universe: U51, name: BrAnon(2) })...
   = note: ...but the lifetime must also be valid for lifetime RePlaceholder(Placeholder { universe: U51, name: BrAnon(1) })...
   = note: ...so that the types are compatible:
           expected Foo
              found Foo

error: aborting due to 4 previous errors

Some errors occurred: E0308, E0495.
For more information about an error, try `rustc --explain E0308`.
